# umcx

./: AUTHORS.md  LICENSE.txt  README.md
.github/workflows/: run_test.yml
src/: CMakeLists.txt  Makefile  umcx.cpp  umcxdoc.cfg
src/miniz/: miniz.hpp
src/nlohmann/: json.hpp
src/zmat/: Makefile  README.md  zmat.h  zmatlib.c  zmatlib.h  zmatlib.hpp
test/: testumcx.sh
umcxlab/: mcx2json.m  umcxlab.m
webpage/: umcx.html
